fdo#82014: Remove old conditional formats when setting new one by UNO API

Change-Id: I76488045eba281227124041da505e38c4c3d31c1